[gd_scene load_steps=13 format=2]

[ext_resource path="res://controls/hud.gd" type="Script" id=1]
[ext_resource path="res://controls/display_player_score.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/KenPixel Blocks.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://controls/display_time.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Kenney Pixel.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://shaders/fade_to_black.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://assets/fonts/KenPixel Blocks.ttf"

[sub_resource type="DynamicFont" id=2]

size = 48
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 128
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 128
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="hud" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="display_player_score" parent="." index="0" instance=ExtResource( 2 )]

anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_right = -15.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
align = 2
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="display_time" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_right = 300.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 4 )
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="night_falls" type="Label" parent="." index="2"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -332.0
margin_top = -48.0
margin_right = 332.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Night has Fallen!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="fade_to_black" parent="." index="3" instance=ExtResource( 6 )]

[node name="activity_complete_container" type="VBoxContainer" parent="." index="4"]

visible = false
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -360.0
margin_top = 160.0
margin_right = 360.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_constants/separation = 80
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="activity_complete" type="Label" parent="activity_complete_container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 720.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Activity Complete!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="activity_blurb" type="Label" parent="activity_complete_container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 200.0
margin_right = 720.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="press_enter" type="Label" parent="activity_complete_container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 304.0
margin_right = 720.0
margin_bottom = 328.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Hit Enter to Continue"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="fade_in_timer" type="Timer" parent="activity_complete_container" index="3"]

process_mode = 1
wait_time = 0.7
one_shot = true
autostart = false

[connection signal="timeout" from="activity_complete_container/fade_in_timer" to="." method="_on_fade_in_timer_timeout"]


